et kolon ekstra

--- a/app/views/sponsors/_sidebar.html.erb
+++ b/app/views/sponsors/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <% unless @rand_sponsor.nil? %>
-<h3><%= t('sponsors.sidebar.title') %></h3>
+<h3><%= t('sponsors.sidebar.title') %>:</h3>
 <div class="sponsor">
 	<div class="sponsorLogo">
 		<table width="100%" height="100%" align="center" valign="center">
