separated styling of sidebar item

--- a/app/views/sponsors/_sidebar.html.erb
+++ b/app/views/sponsors/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <% unless @rand_sponsor.nil? %>
 <h3><%= t('sponsors.sidebar.title') %>:</h3>
-<div class="sponsor">
+<div class="sponsorSidebar">
 	<div class="sponsorLogo">
 
   		  	<%= image_fu @rand_sponsor.logo, '155x155', :title => @rand_sponsor.title %>
