--- a/public/stylesheets/sponsors.css
+++ b/public/stylesheets/sponsors.css
@@ -60,3 +60,17 @@
 .centerer:hover {
 	background: none;
 }
+.sponsorSidebar { 
+	height: 163px;
+	width: 163px;
+
+	background: white;
+	
+	-moz-border-radius: 0.5em;
+	border-radius: 0.5em;
+	
+	border: 1px solid #aaa;
+	-moz-box-shadow: 0px 0px 3px #666;
+	-webkit-box-shadow: 0px 0px 3px #666;
+	box-shadow: 0px 0px 3px #666;
+}
